Wrap legends in spans to avoid positioning with float
The default style of the `legend` wants to sit within the top border
of the parent `fieldset`. Floating the element will make sure the
`legend` sits within the `fieldset` however it was ruining the
positioning with the succeeding elements. Wrapping the legend within
a `span` achieves the same outcome without needing a float and keeping
the expected positioning.

--- a/app/assets/stylesheets/barnardos/_checkbox.scss
+++ b/app/assets/stylesheets/barnardos/_checkbox.scss
@@ -17,12 +17,8 @@ $outer-ring: $inner-ring + ($ring-size * 3);
 }
 
 .checkbox-group__legend {
-  font-size: $base-font-size;
-  font-weight: normal;
-  line-height: 24px;
-  margin: ($gutter / 2) 0;
+  margin-top: ($gutter / 2);
   color: $black;
-  float: left;
   width: 100%;
 }
 
