--- a/app/assets/stylesheets/barnardos/_radio.scss
+++ b/app/assets/stylesheets/barnardos/_radio.scss
@@ -17,12 +17,8 @@ $outer-ring: $inner-ring + ($ring-size * 3);
 }
 
 .radio-group__legend {
-  font-size: $base-font-size;
-  font-weight: normal;
-  line-height: 24px;
-  margin: 0 0 ($gutter / 2);
+  margin-top: ($gutter / 2);
   color: $black;
-  float: left;
   width: 100%;
 }
 
